update editorconfig; reformat project